panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__constexpr__test_error_typeck_error_in_bitfield_width.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/constexpr/test_error_typeck_error_in_bitfield_width.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: invalid application of `sizeof` to incomplete type `array<int; ∅>`
   ╭─[panko/tests/cases/constexpr/test_error_typeck_error_in_bitfield_width.c:2:11]
   │
 2 │     int x:sizeof(int[]);
   │           ──────┬──────  
   │                 ╰──────── in this expression
───╯

Error: `_Lengthof` can only be applied to arrays of known length
   ╭─[panko/tests/cases/constexpr/test_error_typeck_error_in_bitfield_width.c:3:21]
   │
 3 │     int y:_Lengthof(long[]);
   │           ───────── ───┬──  
   │                        ╰──── `array<long; ∅>` has unknown length
───╯
